syntax = "proto3";

package auth.v1;

service AuthService {
  rpc SignIn (SignInRequest) returns (SignInResponse) {}
  rpc SignUp (SignUpRequest) returns (SignUpResponse) {}
}

message SignInRequest {
    string login = 1;
    string password = 2;
}

message SignInResponse {
  string token = 1;
}

message SignUpRequest {
    string login = 1;
    string password = 2;
}

message SignUpResponse {
  string token = 1;
}